--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         $("#header").load("pages/header.html"); 
       });
       $(function(){
-        $("#footer").load("pages/footer.html")
+        $("#footer").load("pages/footer.html");
       });
       </script> 
 
@@ -73,7 +73,7 @@
             }
             slides[slideIndex-1].style.display = "block";  
             dots[slideIndex-1].className += " active";
-            setTimeout(showSlides, 4000); // Change image every 4 seconds
+            setTimeout(showSlides, 3000); // Change image every 4 seconds
             }
         
         
