--- a/pages/footer.html
+++ b/pages/footer.html
@@ -186,7 +186,7 @@ a:hover{
 hr{
     opacity:0.1;
 }
-@media (max-width: 767px){
+@media (max-width: 800px){
     .main{
         width: 100%;
         font-size: 40px;
@@ -517,10 +517,9 @@ hr{
             <section class = "link1">
                 <h2>CATEGORIES</h2>
                 <ul>
-                    <li><a href = "./../cricket/cricket.html">Cricket</a></li>
-                    <li><a href = "./../football/football.html">Football</a></li>
-                    <li><a href = "#">Table Tennis</a></li>
-                    <li><a href = "#">Hockey</a></li>
+                    <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/cricket/cricket.html">Cricket</a></li>
+                    <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/football/football.html">Football</a></li>
+                    <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">Hockey</a></li>
                     <li><a href = "#">latest news</a></li>
                 </ul>
             </section>
