--- a/pages/header.html
+++ b/pages/header.html
@@ -21,6 +21,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            top:0;
         }
         .para{
             font-size: 40px; 
@@ -120,6 +121,15 @@
             }
             .cricket ul{
                 display: none;
+            }
+            .cricket-dropdown{
+                visibility: hidden;
+            }
+            .football-dropdown{
+                visibility: hidden;
+            }
+            .hockey-dropdown{
+                visibility: hidden;
             }
         }
         .cricket-dropdown{
@@ -221,12 +231,12 @@
                 </li>
                 <li class = "hockey"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">HOCKEY</a>
                     <ul class= "hockey-dropdown">
-                        <li><a href = "#">Home</a></li>
-                        <li><a href = "#">Team</a></li>
-                        <li><a href = "#">Shedule</a></li>
-                        <li><a href = "#">Olympics</a></li>
-                        <li><a href = "#">News</a></li>
-                        <li><a href = "#">Contact Us</a></li>
+                        <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">Home</a></li>
+                        <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html#team">Team</a></li>
+                        <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html#shedule">Shedule</a></li>
+                        <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT//hockey/hockey.html#olympics">Olympics</a></li>
+                        <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT//hockey/hockey.html#news">News</a></li>
+                        <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT//hockey/hockey.html#contact">Contact Us</a></li>
                     </ul>
                 </li>
                 
