--- a/pages/footer.html
+++ b/pages/footer.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <title>Practical-11</title>
     <style>
         *{margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;}
         
 .main{
     width: 100%;
-    font-size: 40px;
+    font-size: 35px;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: grey;
+    color: black;
+    font-family: 'Playfair Display', serif;
 }
 span{
     font-size: 16px;
@@ -505,42 +509,41 @@ hr{
     </style>
 </head>
 <body>
-    <section class = "main">Explore About SportsEye</section>
-    <footer>
-        <section class = "sec-1">
+    <section class = "main" style="margin-top:100px;">Explore more About us</section>
+    <footer style=" border-top: 1px solid black;">
+        <section class = "sec-1" style="border-bottom: .5px solid black;">
             <section class = about>
-                <h2>
+                <h2 style="color: rgb(15, 13, 13);">
                     ABOUT
                 </h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit eligendi repellat dicta beatae reiciendis nesciunt, adipisci incidunt necessitatibus inventore nisi minima nulla consectetur recusandae autem fuga maxime et accusantium quod eaque ipsum laborum sunt voluptatum! Obcaecati alias repellendus odit ipsum temporibus voluptates corporis dolor ducimus dolorum ratione fuga ex, facilis pariatur eos atque beatae reprehenderit sed ut molestias iure repellat, provident incidunt ab! Repellendus perferendis laborum eius aut corporis, quam quod quos voluptatum, fugiat esse impedit delectus? Totam perspiciatis eos, reprehenderit odit, esse dicta consequuntur maxime perferendis iste ab, modi fuga. Dignissimos possimus corporis at obcaecati ipsa expedita molestias aspernatur?</p>
+                <p style="margin-top: 15px;">The thought to bring out SPORTS EYE originated up with passion and love for the game and from the absence of any other credible site on Indian sports aside from cricket during the time when they started. They have attempted to adopt the game in its totality which is commendable, meaning that there will be much focus on domestic sports like Kabaddi, Football, and Table Tennis etc.</p>
             </section>
             <section class = "link1">
-                <h2>CATEGORIES</h2>
+                <h2 style="color: rgb(15, 13, 13);">CATEGORIES</h2>
                 <ul>
                     <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/cricket/cricket.html">Cricket</a></li>
                     <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/football/football.html">Football</a></li>
                     <li><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">Hockey</a></li>
-                    <li><a href = "#">latest news</a></li>
+                    
                 </ul>
             </section>
             <section class = "link2">
-                <h2>QUICK LINKS</h2>
+                <h2 style="color: rgb(15, 13, 13);">QUICK LINKS</h2>
                 <ul>
                     <li><a href = "#">About us</a></li>
                     <li><a href = "#">Contact Us</a></li>
                     <li><a href = "#">Contribute</a></li>
                     <li><a href = "#">Privacy policy</a></li>
-                    <li><a href = "#">Sitemap</a></li>
                     <li><a href = "#">Disclaimer</a></li>
                 </ul>
             </section>
             <section class = "link3">
-                <h2>Contact US</h2>
+                <h2 style="color: rgb(15, 13, 13);">Contact US</h2>
                 <ul>
-                    <li><i class = "fa fa-home"></i><span></span></li>
+                    <li><i class = "fa fa-home"></i><span>GLA University</span></li>
                     <li><i class = "fa fa-envelope"></i><span>17km Stone, NH-2, Mathura-Delhi Road Mathura,<br>s Chaumuhan, Uttar Pradesh 281406</span></li>
                     <li><i class = "fa fa-mobile"></i><span>Mobile 999999999</span></li>
-                    <li><a href = "#"><i class = "fa fa-facebook-official"></i><a href = "#">betalabsindia</a></li>
+                    <li><a href = "#"><i class = "fa fa-facebook-official"></i><a href = "#">SportsEye</a></li>
                 </ul>
             </section>
         </section>
@@ -556,8 +559,8 @@ hr{
             </ul>
 
         </section>
-        <section class = "sec-4">
-            <p>© 2020 Copyright: MDBoostrap.com</p>
+        <section class = "sec-4" style="background-color:rgb(15, 13, 13);">
+            <p>© 2021 Copyright: SportsEye.com</p>
         </section>
     </footer>
 </body>
