--- a/pages/header.html
+++ b/pages/header.html
@@ -10,11 +10,11 @@
     <style>
         .container{
             width: 100%;
-            padding: 15px;
+            /* padding: 15px; */
             margin: 0px auto;
         }
         .header{
-            width: 100%;
+            width: 100vw;
             height: 70px;
             padding: 0px 20px;
             background-color: lightgrey;
