--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
             <div class="circle"><img src = "images/krishna.jpg"/>
             <p class="names1">Krishna Ballabh</p>
             <p class="names2">B.Tech CSE</p>
-            <p class="names3"></p>
+            <p class="names3">191500408</p>
             </div>
             <div class="circle"><img src = "images/my1.jpg"/>
             <p class="names1">Lalit Saini</p>
             <p class="names2">B.Tech CSE</p>
-            <p class="names3"></p>
+            <p class="names3">191500428</p>
             </div>
             <div class="circle"><img src = "images/Manish.jpeg"/>
             <p class="names1">Manish Dhakrey</p>
             <p class="names2">B.Tech CSE</p>
-            <p class="names3"></p>
+            <p class="names3">191500434</p>
             </div>
         </div>
         <div id = "footer"></div>
