--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p class="names3">191500428</p>
             </div>
             <div class="circle"><img src = "images/Manish.jpeg"/>
-            <p class="names1">Manish Dhakrey</p>
+            <p class="names1">Manish</p>
             <p class="names2">B.Tech CSE</p>
             <p class="names3">191500434</p>
             </div>
